[gd_scene load_steps=6 format=2]

[ext_resource path="res://models/damager.gd" type="Script" id=1]
[ext_resource path="res://scripts/billboarding.gd" type="Script" id=2]
[ext_resource path="res://models/birthday_chicken.gd" type="Script" id=3]
[ext_resource path="res://materials/chicken.tres" type="Material" id=4]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.419581, 0.534654, 0 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="RigidBody" type="RigidBody" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 2 )

[node name="Sprite3D" type="CSGBox" parent="RigidBody/CollisionShape"]
width = 0.833
height = 1.06
depth = 0.001
material = ExtResource( 4 )
script = ExtResource( 2 )

[node name="RayCast" type="RayCast" parent="RigidBody"]
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="RayCast2" type="RayCast" parent="RigidBody"]
transform = Transform( 0.927184, 0, 0.374607, 0, 1, 0, -0.374607, 0, 0.927184, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="RayCast3" type="RayCast" parent="RigidBody"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="RayCast4" type="RayCast" parent="RigidBody"]
transform = Transform( 0.927184, 0, -0.374607, 0, 1, 0, 0.374607, 0, 0.927184, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )

[node name="RayCast5" type="RayCast" parent="RigidBody"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 3 )
